--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "json-server api.json  -p 3001 & nuxt dev",
+    "data": "json-server ./generate.js",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -14,7 +15,11 @@
     "@tailwindcss/forms": "^0.5.4",
     "@types/node": "^18.17.3",
     "autoprefixer": "^10.4.15",
+    "faker": "^5.5.3",
+    "json-server": "^0.17.3",
+    "lodash": "^4.17.21",
     "nuxt": "^3.6.5",
+    "nuxt-icon": "^0.5.0",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3"
   }
